# ecom-analytics-pipeline

./: .gitignore  README.md  pyproject.toml
bigquery/cli/: __init__.py  load.py
bigquery/profiling/: 04_information_schema.sql
bigquery/schemas/: events.json  events_typed.json  ip_locations.json  products.json  table_definitions.md
bigquery/utils/: __init__.py  loader.py
cloud_functions/gcs_to_bq/: .gcloudignore  copy_common.sh  deploy.sh  main.py  requirements.txt
common/bigquery/: __init__.py  client.py  loader.py  loader_utils.py  query_builders.py
common/database/: __init__.py
common/storage/: __init__.py  gcs_client.py
common/transformations/: __init__.py  bigquery_schema.py
dbt/: dbt_project.yml  pyproject.toml
dbt/macros/: generate_incremental_surrogate_key.sql  schema.yml
dbt/macros/scd/: scd2_calculate_is_current.sql  scd2_calculate_valid_to.sql  scd2_row_hash.sql  scd_end_date.sql  schema.yml
dbt/models/core/: dim_customer.sql  dim_product.sql  fact_sales_order_line.sql  schema.yml
dbt/models/mart/: mart_sales_by_product.sql
dbt/models/staging/: sources.yml  stg_events.sql  stg_products.sql
dbt/tests/: assert_only_one_current_per_customer.sql  assert_valid_date_ranges.sql
docs/: dashboards.md  data_dictionary.md  dbt_models.md  product_crawl.md  setup_guide.md
docs/diagrams/: dimensional_model.dbml
ingestion/product_crawler/: __main__.py  analyze_failures.py  config.py  crawl_products_parallel.py  crawler.py  extractor.py  fetch_httpx.py  parsers.py  retry.py  utils.py
scripts/: convert_json_to_jsonl.py  export_test_sample.py
(+32 files in other folders)
